tests/ui/fail/repr/conflicting_ignored_reprs.stderr
error[E0692]: transparent struct cannot have other repr hints
 --> tests/ui/fail/repr/conflicting_ignored_reprs.rs:4:8
  |
4 | #[repr(C, transparent, u32)] // The macro simply ignores `repr(C)` and `repr(transparent)`
  |        ^  ^^^^^^^^^^^
